# sensor_abstractions

./: README.md  init_spi.sh
src/: .gitignore  CMakeLists.txt  accelerometer.h  bbb.cmake  bus.h  error.h  gyroscope.h  icdevice.cpp  icdevice.h  launch.cpp  magnetometer.h  sensor.h  si_types.h  spibus.cpp  spibus.h  st_accel_dsh.cpp  st_accel_dsh.h  st_gyro_20h.h  st_magno_mdl.cpp  st_magno_mdl.h  st_sensor.cpp  st_sensor.h  thermometer.h  types.h
